-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 2.7.0-rc, Qt Creator 2.7.0, Qt Creator 2.8.0-beta
-
None
-
Windows 7 64Bit, Qt 4.8.0 - Qt 4.8.4
-
e088541c0d9f7770fc66ad72427e7f29c8e5f1b6
Qt Creator crashes sporadic when loading a c++ file. There are two different places where it crashes. It crashes only when I start Qt Creator without debugger. So I create the CPlusPlus lib with debug infos and start the post debugger:
1.
CPlusPlus.dll!CPlusPlus::QualifiedNameId::identifier() Zeile 39 + 0x2 Bytes C++
CPlusPlus.dll!CPlusPlus::FullySpecifiedType::simplified() Zeile 217 + 0x9 Bytes C++
CPlusPlus.dll!CPlusPlus::FullySpecifiedType::simplified() Zeile 218 + 0x18 Bytes C++
CPlusPlus.dll!CPlusPlus::ResolveExpression::visit(CPlusPlus::CallAST * ast) Zeile 692 + 0x23 Bytes C++
CPlusPlus.dll!CPlusPlus::CallAST::accept0(CPlusPlus::ASTVisitor * visitor) Zeile 711 + 0x13 Bytes C++
CPlusPlus.dll!CPlusPlus::AST::accept(CPlusPlus::ASTVisitor * visitor) Zeile 51 C++
CPlusPlus.dll!CPlusPlus::ResolveExpression::expression(CPlusPlus::ExpressionAST * ast) Zeile 115 C++
CPlusPlus.dll!CPlusPlus::ResolveExpression::resolve(CPlusPlus::ExpressionAST * ast, CPlusPlus::Scope * scope, bool ref) Zeile 108 C++
CPlusPlus.dll!CPlusPlus::ResolveExpression::visit(CPlusPlus::MemberAccessAST * ast) Zeile 801 C++
CPlusPlus.dll!CPlusPlus::MemberAccessAST::accept0(CPlusPlus::ASTVisitor * visitor) Zeile 737 + 0x13 Bytes C++
CPlusPlus.dll!CPlusPlus::AST::accept(CPlusPlus::ASTVisitor * visitor) Zeile 51 C++
CPlusPlus.dll!CPlusPlus::ResolveExpression::expression(CPlusPlus::ExpressionAST * ast) Zeile 115 C++
CPlusPlus.dll!CPlusPlus::ResolveExpression::resolve(CPlusPlus::ExpressionAST * ast, CPlusPlus::Scope * scope, bool ref) Zeile 108 C++
CPlusPlus.dll!CPlusPlus::ResolveExpression::operator()(CPlusPlus::ExpressionAST * ast, CPlusPlus::Scope * scope) Zeile 90 + 0x20 Bytes C++
CPlusPlus.dll!CPlusPlus::TypeOfExpression::operator()(CPlusPlus::ExpressionAST * expression, QSharedPointer<CPlusPlus::Document> document, CPlusPlus::Scope * scope) Zeile 119 C++
CPlusPlus.dll!CPlusPlus::TypeOfExpression::operator()(const QByteArray & utf8code, CPlusPlus::Scope * scope, CPlusPlus::TypeOfExpression::PreprocessMode mode) Zeile 84 + 0x76 Bytes C++
CppTools.dll!0fadb5b4()
[Unten angegebene Rahmen sind möglicherweise nicht korrekt und/oder fehlen, keine Symbole geladen für CppTools.dll]
CPlusPlus.dll!CPlusPlus::CallAST::accept0(CPlusPlus::ASTVisitor * visitor) Zeile 711 + 0x13 Bytes C++
CPlusPlus.dll!CPlusPlus::AST::accept(CPlusPlus::ASTVisitor * visitor) Zeile 51 C++
CPlusPlus.dll!CPlusPlus::ExpressionStatementAST::accept0(CPlusPlus::ASTVisitor * visitor) Zeile 466 C++
CPlusPlus.dll!CPlusPlus::AST::accept(CPlusPlus::ASTVisitor * visitor) Zeile 51 C++
CPlusPlus.dll!CPlusPlus::CompoundStatementAST::accept0(CPlusPlus::ASTVisitor * visitor) Zeile 290 + 0x15 Bytes C++
CPlusPlus.dll!CPlusPlus::AST::accept(CPlusPlus::ASTVisitor * visitor) Zeile 51 C++
CPlusPlus.dll!CPlusPlus::ForStatementAST::accept0(CPlusPlus::ASTVisitor * visitor) Zeile 511 C++
CPlusPlus.dll!CPlusPlus::AST::accept(CPlusPlus::ASTVisitor * visitor) Zeile 51 C++
CPlusPlus.dll!CPlusPlus::CompoundStatementAST::accept0(CPlusPlus::ASTVisitor * visitor) Zeile 290 + 0x15 Bytes C++
CPlusPlus.dll!CPlusPlus::AST::accept(CPlusPlus::ASTVisitor * visitor) Zeile 51 C++
CppTools.dll!0fadb2ca()
CppTools.dll!0fab75c4()
CPlusPlus.dll!CPlusPlus::FunctionDefinitionAST::accept0(CPlusPlus::ASTVisitor * visitor) Zeile 471 + 0x14 Bytes C++
CPlusPlus.dll!CPlusPlus::AST::accept(CPlusPlus::ASTVisitor * visitor) Zeile 51 C++
CPlusPlus.dll!CPlusPlus::TranslationUnitAST::accept0(CPlusPlus::ASTVisitor * visitor) Zeile 920 + 0x17 Bytes C++
CPlusPlus.dll!CPlusPlus::AST::accept(CPlusPlus::ASTVisitor * visitor) Zeile 51 C++
CppTools.dll!0fad945b()
QtCore4.dll!5a867d87()
QtCore4.dll!5a876113()
QtCore4.dll!5a99f07b()
msvcr100.dll!7373c556()
msvcr100.dll!7373c600()
kernel32.dll!74be33aa()
ntdll.dll!771e9ef2()
ntdll.dll!771e9ec5()
2.
CPlusPlus.dll!CPlusPlus::FullySpecifiedType::simplified() Zeile 217 + 0x4 Bytes C++
CPlusPlus.dll!CPlusPlus::FullySpecifiedType::simplified() Zeile 218 + 0x18 Bytes C++
CPlusPlus.dll!CPlusPlus::ResolveExpression::visit(CPlusPlus::CallAST * ast) Zeile 692 + 0x23 Bytes C++
CPlusPlus.dll!CPlusPlus::ResolveExpression::switchResults(const QList<CPlusPlus::LookupItem> & results) Zeile 120 + 0x16 Bytes C++
CPlusPlus.dll!CPlusPlus::ResolveExpression::expression(CPlusPlus::ExpressionAST * ast) Zeile 115 C++
CPlusPlus.dll!CPlusPlus::MemberAccessAST::accept0(CPlusPlus::ASTVisitor * visitor) Zeile 737 + 0x13 Bytes C++
CppTools.dll!00fcb5b4()
[Unten angegebene Rahmen sind möglicherweise nicht korrekt und/oder fehlen, keine Symbole geladen für CppTools.dll]
CPlusPlus.dll!CPlusPlus::CallAST::accept0(CPlusPlus::ASTVisitor * visitor) Zeile 711 + 0x13 Bytes C++
CPlusPlus.dll!CPlusPlus::AST::accept(CPlusPlus::ASTVisitor * visitor) Zeile 51 C++
CPlusPlus.dll!CPlusPlus::ExpressionStatementAST::accept0(CPlusPlus::ASTVisitor * visitor) Zeile 466 C++
CPlusPlus.dll!CPlusPlus::AST::accept(CPlusPlus::ASTVisitor * visitor) Zeile 51 C++
CPlusPlus.dll!CPlusPlus::CompoundStatementAST::accept0(CPlusPlus::ASTVisitor * visitor) Zeile 290 + 0x15 Bytes C++
CPlusPlus.dll!CPlusPlus::AST::accept(CPlusPlus::ASTVisitor * visitor) Zeile 51 C++
CPlusPlus.dll!CPlusPlus::IfStatementAST::accept0(CPlusPlus::ASTVisitor * visitor) Zeile 519 C++
CPlusPlus.dll!CPlusPlus::AST::accept(CPlusPlus::ASTVisitor * visitor) Zeile 51 C++
CPlusPlus.dll!CPlusPlus::CompoundStatementAST::accept0(CPlusPlus::ASTVisitor * visitor) Zeile 290 + 0x15 Bytes C++
CPlusPlus.dll!CPlusPlus::AST::accept(CPlusPlus::ASTVisitor * visitor) Zeile 51 C++
CppTools.dll!00fcb2ca()
CppTools.dll!00fa75c4()
CPlusPlus.dll!CPlusPlus::FunctionDefinitionAST::accept0(CPlusPlus::ASTVisitor * visitor) Zeile 471 + 0x14 Bytes C++
CPlusPlus.dll!CPlusPlus::AST::accept(CPlusPlus::ASTVisitor * visitor) Zeile 51 C++
CPlusPlus.dll!CPlusPlus::TranslationUnitAST::accept0(CPlusPlus::ASTVisitor * visitor) Zeile 920 + 0x17 Bytes C++
CPlusPlus.dll!CPlusPlus::AST::accept(CPlusPlus::ASTVisitor * visitor) Zeile 51 C++
CppTools.dll!00fc945b()
QtCore4.dll!59c67877()
QtCore4.dll!59c75cc3()
QtCore4.dll!59da182b()
msvcr100.dll!7373c556()
msvcr100.dll!7373c600()
kernel32.dll!74be33aa()
ntdll.dll!771e9ef2()
ntdll.dll!771e9ec5()